dark mode issue resolved

--- a/style.css
+++ b/style.css
@@ -92,6 +92,9 @@ Dark Mode
     background-color: var(--clr-dark);
     color: var(--clr-light-gray);
 }
+.dark-mode a { 
+    color:var(--clr-light-gray); 
+}
 
 
 
